--- a/LocalDisasterPreventionInformationApp/AppShell.xaml
+++ b/LocalDisasterPreventionInformationApp/AppShell.xaml
@@ -7,35 +7,15 @@
     xmlns:friends="clr-namespace:LocalDisasterPreventionInformationApp.Pages.Friends"
     xmlns:notification="clr-namespace:LocalDisasterPreventionInformationApp.Pages.Notification"
     xmlns:setting="clr-namespace:LocalDisasterPreventionInformationApp.Pages.Setting"
+    xmlns:startup="clr-namespace:LocalDisasterPreventionInformationApp.Pages.Startup"
     xmlns:stock="clr-namespace:LocalDisasterPreventionInformationApp.Pages.Stock"
     xmlns:hazard="clr-namespace:LocalDisasterPreventionInformationApp.Pages.Hazard"
     xmlns:disaster="clr-namespace:LocalDisasterPreventionInformationApp.Pages.Disaster"
     xmlns:register="clr-namespace:LocalDisasterPreventionInformationApp.Pages.Register">
 
-    <!-- 会員登録ページ -->
-    <ShellContent Route="RegisterPage"
+    <ShellContent Route="StartupPage"
                   FlyoutItemIsVisible="False"
-                  ContentTemplate="{DataTemplate register:RegisterPage}" />
-
-    <!-- 会員登録確認ページ -->
-    <ShellContent Route="ConfirmPage"
-                  FlyoutItemIsVisible="False"
-                  ContentTemplate="{DataTemplate register:ConfirmPage}" />
-
-    <!-- 友達一覧ページ -->
-    <ShellContent Route="FriendsPage"
-                  FlyoutItemIsVisible="False"
-                  ContentTemplate="{DataTemplate friends:FriendsPage}" />
-
-    <!-- 通知ページ -->
-    <ShellContent Route="NotificationPage"
-                  FlyoutItemIsVisible="False"
-                  ContentTemplate="{DataTemplate notification:NotificationPage}" />
-
-    <!-- 設定ページ -->
-    <ShellContent Route="SettingPage"
-                  FlyoutItemIsVisible="False"
-                  ContentTemplate="{DataTemplate setting:SettingPage}" />
+                  ContentTemplate="{DataTemplate startup:StartupPage}"/>
 
     <!-- ハンバーガーメニュー用 -->
     <!-- トップページ -->
@@ -61,4 +41,30 @@
         <ShellContent Route="StockPage"
                        ContentTemplate="{DataTemplate stock:StockPage}" />
     </FlyoutItem>
+
+    <!--普通のページ用-->
+    <!-- 会員登録ページ -->
+    <ShellContent Route="RegisterPage"
+                  FlyoutItemIsVisible="False"
+                  ContentTemplate="{DataTemplate register:RegisterPage}" />
+
+    <!-- 会員登録確認ページ -->
+    <ShellContent Route="ConfirmPage"
+                  FlyoutItemIsVisible="False"
+                  ContentTemplate="{DataTemplate register:ConfirmPage}" />
+
+    <!-- 友達一覧ページ -->
+    <ShellContent Route="FriendsPage"
+                  FlyoutItemIsVisible="False"
+                  ContentTemplate="{DataTemplate friends:FriendsPage}" />
+
+    <!-- 通知ページ -->
+    <ShellContent Route="NotificationPage"
+                  FlyoutItemIsVisible="False"
+                  ContentTemplate="{DataTemplate notification:NotificationPage}" />
+
+    <!-- 設定ページ -->
+    <ShellContent Route="SettingPage"
+                  FlyoutItemIsVisible="False"
+                  ContentTemplate="{DataTemplate setting:SettingPage}" />
 </Shell>
